Fix content page margin on narrow screen

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -281,17 +281,12 @@ footer {
     padding-bottom: 1em;
   }
 
-  .contents-page {                    // `.contents-page` selects `main` in '/_layouts/default.html'
-    padding-top: 3em;
-    padding-bottom: .01em;
-  }
-
   .contents-table td {                      // `.contents-table` selects `table` in '/contents.html'
     vertical-align: top;
   }
 
-  h1, h2, h3, h4, h5, h6 {
-    max-width: 11.5em;
+  h1 {                                               // Avoid leaving one character at the last line
+    max-width: 9em;
   }
 
     a,
